--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person(given = c("Albert", "Y."), family = "Kim", role = c("cre", "aut"), email = "albert.ys.kim@gmail.com", comment = c(ORCID = "0000-0001-7824-306X")),
     person(given = "Ethan", family = "White", role = "aut", email = "ethan@weecology.org", comment = c(ORCID = "0000-0001-6728-7745")),
     person(given = c("Glenda", "M."), family = "Yenni", role = "aut", comment = c(ORCID = "0000-0001-6969-1848")),
-    person(given = "Cosme", family = "Fulanito", role = "aut")
+    person(given = "Markus", family = "Bauer", role = "aut", email = "markus1.bauer@tum.de", comment = c(ORCID = "0000-0001-5372-4174"))
     )
 Depends: R (>= 4.0.1)
 Imports:
