--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,8 @@ Authors@R: c(
 Depends: R (>= 4.0.1)
 Imports:
   testthat
+  here
+  dplyr
+  readr
 URL: https://github.com/weecology/livedat-github-actions
 BugReports: https://github.com/weecology/livedat-github-actions/issues
