--- a/.github/workflows/data-tests.yaml
+++ b/.github/workflows/data-tests.yaml
@@ -7,16 +7,16 @@
 on:
   push:
     paths:
-      - 'raw_data/FFF_excel**'
-      - '!raw_data/README.md'
+      - 'data_raw'
+      - '!data_raw/README.md'
       - 'R_scripts/CI_1_Generate_reports.R'
       - 'R_scripts/CI_2_Generate_warnings.R'
       - 'R_scripts/CI_3_Generate_map_of_reports.R'
       - 'R_scripts/CI_4_Generate_daily_progress_reports.R'
   pull_request:
     paths:
-      - 'raw_data/FFF_excel**'
-      - '!raw_data/README.md'
+      - 'data_raw'
+      - '!data_raw/README.md'
       - 'R_scripts/CI_1_Generate_reports.R'
       - 'R_scripts/CI_2_Generate_warnings.R'
       - 'R_scripts/CI_3_Generate_map_of_reports.R'
