--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: vegetationdatagithubactions
-Title: Testing vegetation data with GitHub Actions
-Description: Testing vegetation data with GitHub Actions repository.
+Title: Continuous integration (CI) of vegetation data with GitHub Actions
+Description: Continuous integration (CI) with GitHub Actions enables vegetation ecologists to check the data for error after field sampling and typing it in the data file.
 License: CC0-1.0 + file LICENSE
 Version: 0.0.1
 Authors@R: c(
