--- a/config.yml
+++ b/config.yml
@@ -6,5 +6,5 @@ repo: markus1bauer/CI_vegetation_surveys
 # Generally you want these to be different from your user account so it is clear
 # which commits are automated.
 deploy_email: "markus1.bauer@tum.de"
-deploy_username: "ci_markus"
+deploy_username: "markus1bauer"
 ---
