--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,16 @@
-Package: vegetationdatagithubactions
+Package: vegetation_ci
 Title: Continuous integration (CI) of vegetation data with GitHub Actions
 Description: Continuous integration (CI) with GitHub Actions enables vegetation ecologists to check the data for error after field sampling and typing it in the data file.
 License: CC0-1.0 + file LICENSE
 Version: 0.0.1
 Authors@R: c(
-    person(given = "Markus", family = "Bauer", role = "aut", email = "markus1.bauer@tum.de", comment = c(ORCID = "0000-0001-5372-4174"))
+    person(
+    given = "Markus",
+    family = "Bauer",
+    role = "aut",
+    email = "markus1.bauer@tum.de",
+    comment = c(ORCID = "0000-0001-5372-4174")
+    )
     )
 Depends: R (>= 4.1.0)
 Imports:
