--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,13 +4,7 @@ Description: Continuous integration (CI) with GitHub Actions enables vegetation 
 License: CC0-1.0 + file LICENSE
 Version: 0.0.1
 Authors@R: c(
-    person(
-    given = "Markus",
-    family = "Bauer",
-    role = "aut",
-    email = "markus1.bauer@tum.de",
-    comment = c(ORCID = "0000-0001-5372-4174")
-    )
+    person(given = "Markus", family = "Bauer", role = "aut", email = "markus1.bauer@tum.de", comment = c(ORCID = "0000-0001-5372-4174"))
     )
 Depends: R (>= 4.1.0)
 Imports:
