--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: vegetationCI
 Title: Continuous integration (CI) of vegetation data with GitHub Actions
 Description: Continuous integration (CI) with GitHub Actions enables vegetation ecologists to check the data for error after field sampling and typing it in the data file.
-License: CC0-1.0 + file LICENSE
+License: CC0-1.0
 Version: 0.0.1
 Authors@R: c(
     person(given = "Markus", family = "Bauer", role = c("cre", "aut"), email = "markus1.bauer@tum.de", comment = c(ORCID = "0000-0001-5372-4174")),
