--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,6 @@ Encoding: UTF-8
 Depends: R (>= 4.1.0)
 Imports:
   testthat,
-  data.table,
   dplyr,
   forcats,
   ggplot2,
@@ -29,6 +28,8 @@ Imports:
   stringr,
   tibble,
   tidyr
+Depends:
+  data.table
 Suggests:
   renv,
   lubridate,
