Use roxygen and change Rbuildignore

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,3 +37,4 @@ Suggests:
 URL: https://github.com/markus1bauer/CI_vegetation_surveys
 BugReports: https://github.com/markus1bauer/CI_vegetation_surveys/issues
 Config/testthat/edition: 3
+RoxygenNote: 7.2.3
